Aula: "Videoaula - Mão na Massa #01 - Site de Blog (Parte HTML)"

--- a/Contato/index.html
+++ b/Contato/index.html
@@ -10,8 +10,8 @@
         <nav class="menu-principal">
             <ul>
                 <li><a href="..">Home</a></li>
-                <li><a href="../Patrocinio">Patrocínio</a></li>
-                <li><a href="../Sobre">Sobre</a></li>
+                <li><a href="../Patrocinio">Patrocínio e Anúncios</a></li>
+                <li><a href="../Sobre">Sobre Mim</a></li>
                 <li><a href=".">Contato</a></li>
             </ul>
         </nav>
@@ -24,15 +24,15 @@
         <h2>Telefone</h2>
         <p>Estes são os meus telefones fictícios para contato:</p>
         <ul>
-            <li>Telefone celular: +00 00 0 0000-0000</li>
-            <li>Telefone fixo: +00 00 0000-0000</li>
+            <li>Telefone celular: <a href="tel:+0000000000000">+00 00 0 0000-0000</a></li>
+            <li>Telefone fixo: <a href="tel:+000000000000">+00 00 0000-0000</a></li>
         </ul>
         
         <h2>E-Mail</h2>
         <p>Estes são os meus endereços de E-Mail fictícios para contato:</p>
         <ul>
-            <li>E-Mail Pessoal: <email>example@example.com</email></li>
-            <li>E-Mail Profissional: <email>exemplo@exemplo.com.br</email></li>
+            <li>E-Mail Pessoal: <a href="mailto:example@example.com"><email>example@example.com</email></a></li>
+            <li>E-Mail Profissional: <a href="mailto:exemplo@exemplo.com.br"><email>exemplo@exemplo.com.br</email></a></li>
         </ul>
 
 
@@ -49,11 +49,13 @@
     <!-- Barra lateral -->
     <aside>
         <div class="caixa-pesquisa">
+            <h3 class="titulo">Pesquisa</h3>
             <input type="text" class="texto_pesquisa">
             <button class="botao_ok">Ok</button>
         </div>
         
         <div class="caixa-categoria">
+            <h3 class="titulo">Categorias</h3>
             <ul>
                 <li><a href="#">Categoria 1</a></li>
                 <li><a href="#">Categoria 2</a></li>
