--- a/Busca/index.html
+++ b/Busca/index.html
@@ -10,8 +10,8 @@
         <nav class="menu-principal">
             <ul>
                 <li><a href="..">Home</a></li>
-                <li><a href="../Patrocinio">Patrocínio</a></li>
-                <li><a href="../Sobre">Sobre</a></li>
+                <li><a href="../Patrocinio">Patrocínio e Anúncios</a></li>
+                <li><a href="../Sobre">Sobre Mim</a></li>
                 <li><a href="../Contato">Contato</a></li>
             </ul>
         </nav>
@@ -23,11 +23,13 @@
     <!-- Barra lateral -->
     <aside>
         <div class="caixa-pesquisa">
+            <h3 class="titulo">Pesquisa</h3>
             <input type="text" class="texto_pesquisa">
             <button class="botao_ok">Ok</button>
         </div>
         
         <div class="caixa-categoria">
+            <h3 class="titulo">Categorias</h3>
             <ul>
                 <li><a href="#">Categoria 1</a></li>
                 <li><a href="#">Categoria 2</a></li>
