--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <nav class="menu-principal">
             <ul>
                 <li><a href=".">Home</a></li>
-                <li><a href="Patrocinio">Patrocínio</a></li>
-                <li><a href="Sobre">Sobre</a></li>
+                <li><a href="Patrocinio">Patrocínio e Anúncios</a></li>
+                <li><a href="Sobre">Sobre Mim</a></li>
                 <li><a href="Contato">Contato</a></li>
             </ul>
         </nav>
@@ -19,26 +19,52 @@
 
     <!-- Conteúdo do site -->
     <main>
-        <div class="caixa-post">
-            <img class="thumbnail" src="https://source.unsplash.com/random/150x150?sig=3" alt="Imagem de destaque">
+        <h1>Blog do Henrique Mendonça</h1>
+
+        <article class="caixa-post">
+            <img class="thumbnail" src="https://source.unsplash.com/random/150x150?sig=1" alt="Imagem de destaque">
             <h3 class="titulo">Postagem número 1</h3>
-            <div class="subtitulo">
+            <h4 class="subtitulo">
                 <span class="data">08/05/2020</span> -
-                <span class="autor">Henrique Mendonça</span>
+                <span class="autor">Henrique Mendonça</span> -
                 <span class="categorias">[Categoria 2]</span>
-            </div>
-            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius omnis deleniti quas eligendi illum perferendis, laborum perspiciatis. Maiores consectetur, commodi debitis tempore consequuntur alias porro, accusamus repellat, ipsum ipsam impedit!</p>
-        </div>
+            </h4>
+            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam recusandae tenetur officiis quod autem magnam et eos provident suscipit vel.</p>
+        </article>
+
+        <article class="caixa-post">
+            <img class="thumbnail" src="https://source.unsplash.com/random/150x150?sig=2" alt="Imagem de destaque">
+            <h3 class="titulo">Postagem número 2</h3>
+            <h4 class="subtitulo">
+                <span class="data">09/08/2020</span> -
+                <span class="autor">Henrique Mendonça</span> -
+                <span class="categorias">[Categoria 4]</span>
+            </h4>
+            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam recusandae tenetur officiis quod autem magnam et eos provident suscipit vel.</p>
+        </article>
+        
+        <article class="caixa-post">
+            <img class="thumbnail" src="https://source.unsplash.com/random/150x150?sig=3" alt="Imagem de destaque">
+            <h3 class="titulo">Postagem número 3</h3>
+            <h4 class="subtitulo">
+                <span class="data">23/11/2020</span> -
+                <span class="autor">Henrique Mendonça</span> -
+                <span class="categorias">[Categoria 1]</span>
+            </h4>
+            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam recusandae tenetur officiis quod autem magnam et eos provident suscipit vel.</p>
+        </article>
     </main>
 
     <!-- Barra lateral -->
     <aside>
         <div class="caixa-pesquisa">
+            <h3 class="titulo">Pesquisa</h3>
             <input type="text" class="texto_pesquisa">
             <button class="botao_ok">Ok</button>
         </div>
         
         <div class="caixa-categoria">
+            <h3 class="titulo">Categorias</h3>
             <ul>
                 <li><a href="#">Categoria 1</a></li>
                 <li><a href="#">Categoria 2</a></li>
