--- a/Mao na Massa - Layout Flex/index.html
+++ b/Mao na Massa - Layout Flex/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Exemplo Flex</title>
     <link rel="stylesheet" href="estilos.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
         <a href="#">Marca</a>
 
         <nav>
-            <ul>
+            <ul class="menu">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Quem Somos</a></li>
                 <li><a href="#">Serviços</a></li>
