--- a/Bootstrap Grid/index.html
+++ b/Bootstrap Grid/index.html
@@ -12,7 +12,96 @@
 
 <body>
 
+    <header class="container header">
+        <img src="imagens/tex_logo.png" class="logo" alt="Logo">
+        <nav class="nav">
+            <a class="nav-link active" href="#">Home</a>
+            <a class="nav-link active" href="#">Burguers</a>
+            <a class="nav-link active" href="#">Acompanhamentos</a>
+            <a class="nav-link active" href="#">Sobremesas</a>
+            <a class="nav-link active" href="#">Contatos</a>
+        </nav>
+    </header>
 
+    <main class="container">
+        <section class="row banner">
+            <div class="col-12">
+                <img src="imagens/burgers-banner.jpg" alt="Banner do Burguer">
+            </div>
+        </section>
+
+        <section class="row texto_principal">
+            <h1>A melhor burgueria da cidade, com ótimas opções!</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ullam vitae, explicabo nulla modi aliquam
+                iste repellendus, nemo consequuntur tempora sapiente magni nesciunt quisquam, enim debitis quaerat rerum
+                fugiat dolores?
+                Quam quas temporibus eligendi assumenda eveniet est quibusdam at natus deleniti quod dolores officia
+                optio molestiae officiis ab non, porro itaque vel. Aut laudantium laborum blanditiis tenetur provident
+                deserunt rem?
+            </p>
+        </section>
+
+        <section class="row card_area">
+            <div class="col-12 col-sm-6 col-md-3 col-lg-3">
+                <img src="imagens/img01.jpg"
+                    alt="Promo de quinta 22/02: Burguer Dunlo. Pedindo qualquer burguer do cardápio com + R$5,00 você ganha o burguer morango moreno">
+            </div>
+        </section>
+
+        <section class="row card_area">
+            <div class="col-12 col-sm-6 col-md-3 col-lg-3">
+                <img src="imagens/img02.jpg" alt="TonyRoma's Premium SteakHouse Burguer">
+            </div>
+        </section>
+
+        <section class="row card_area">
+            <div class="col-12 col-sm-6 col-md-3 col-lg-3">
+                <img src="imagens/img03.jpg" alt="2 Packet 4-Cheese Whopper Jr. RP60.000">
+            </div>
+        </section>
+
+        <section class="row card_area">
+            <div class="col-12 col-sm-6 col-md-3 col-lg-3">
+                <img src="imagens/img04.jpg" alt="New Sweet Chilli Fish Burguer">
+            </div>
+        </section>
+
+        <section class="row infos">
+            <div class="col-12 col-sm-12 col-md-3 col-lg-3">
+                <h1>Acesso rápido</h1>
+                <nav class="nav menu2">
+                    <a class="nav-link active" href="#">Home</a>
+                    <a class="nav-link active" href="#">Burguers</a>
+                    <a class="nav-link active" href="#">Acompanhamentos</a>
+                    <a class="nav-link active" href="#">Sobremesas</a>
+                    <a class="nav-link active" href="#">Contatos</a>
+                </nav>
+            </div>
+
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                <h1>Como nasceu o melhor hamburguer</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ullam vitae, explicabo nulla modi
+                    aliquam
+                    iste repellendus, nemo consequuntur tempora sapiente magni nesciunt quisquam, enim debitis quaerat
+                    rerum
+                    fugiat dolores?
+                    Quam quas temporibus eligendi assumenda eveniet est quibusdam at natus deleniti quod dolores officia
+                    optio molestiae officiis ab non, porro itaque vel. Aut laudantium laborum blanditiis tenetur
+                    provident
+                    deserunt rem?
+                </p>
+            </div>
+
+            <div class="col-12 col-sm-12 col-md-3 col-lg-3">
+                <h1>Onde estamos</h1>
+                <img src="imagens/estabelecimento.jpg" alt="Imagem do estabelecimento">
+            </div>
+        </section>
+    </main>
+
+    <footer class="container footer">
+        <p>Tex Burguers - Todos os direitos reservados - 2022.</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
