--- a/Bootstrap Grid/index.html
+++ b/Bootstrap Grid/index.html
@@ -14,7 +14,7 @@
 
     <header class="container header">
         <img src="imagens/tex_logo.png" class="logo" alt="Logo">
-        <nav class="nav">
+        <nav class="nav menu1">
             <a class="nav-link active" href="#">Home</a>
             <a class="nav-link active" href="#">Burguers</a>
             <a class="nav-link active" href="#">Acompanhamentos</a>
@@ -30,15 +30,24 @@
             </div>
         </section>
 
-        <section class="row texto_principal">
-            <h1>A melhor burgueria da cidade, com ótimas opções!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ullam vitae, explicabo nulla modi aliquam
-                iste repellendus, nemo consequuntur tempora sapiente magni nesciunt quisquam, enim debitis quaerat rerum
-                fugiat dolores?
-                Quam quas temporibus eligendi assumenda eveniet est quibusdam at natus deleniti quod dolores officia
-                optio molestiae officiis ab non, porro itaque vel. Aut laudantium laborum blanditiis tenetur provident
-                deserunt rem?
-            </p>
+        <section class="row">
+            <div class="col-12">
+                <div class="texto_principal">
+                    <h1>A melhor burgueria da cidade, com ótimas opções!</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ullam vitae, explicabo nulla modi
+                        aliquam
+                        iste repellendus, nemo consequuntur tempora sapiente magni nesciunt quisquam, enim debitis
+                        quaerat
+                        rerum
+                        fugiat dolores?
+                        Quam quas temporibus eligendi assumenda eveniet est quibusdam at natus deleniti quod dolores
+                        officia
+                        optio molestiae officiis ab non, porro itaque vel. Aut laudantium laborum blanditiis tenetur
+                        provident
+                        deserunt rem?
+                    </p>
+                </div>
+            </div>
         </section>
 
         <section class="row card_area">
@@ -46,21 +55,15 @@
                 <img src="imagens/img01.jpg"
                     alt="Promo de quinta 22/02: Burguer Dunlo. Pedindo qualquer burguer do cardápio com + R$5,00 você ganha o burguer morango moreno">
             </div>
-        </section>
 
-        <section class="row card_area">
             <div class="col-12 col-sm-6 col-md-3 col-lg-3">
                 <img src="imagens/img02.jpg" alt="TonyRoma's Premium SteakHouse Burguer">
             </div>
-        </section>
 
-        <section class="row card_area">
             <div class="col-12 col-sm-6 col-md-3 col-lg-3">
                 <img src="imagens/img03.jpg" alt="2 Packet 4-Cheese Whopper Jr. RP60.000">
             </div>
-        </section>
 
-        <section class="row card_area">
             <div class="col-12 col-sm-6 col-md-3 col-lg-3">
                 <img src="imagens/img04.jpg" alt="New Sweet Chilli Fish Burguer">
             </div>
@@ -68,33 +71,41 @@
 
         <section class="row infos">
             <div class="col-12 col-sm-12 col-md-3 col-lg-3">
-                <h1>Acesso rápido</h1>
-                <nav class="nav menu2">
-                    <a class="nav-link active" href="#">Home</a>
-                    <a class="nav-link active" href="#">Burguers</a>
-                    <a class="nav-link active" href="#">Acompanhamentos</a>
-                    <a class="nav-link active" href="#">Sobremesas</a>
-                    <a class="nav-link active" href="#">Contatos</a>
-                </nav>
+                <div class="grid_cor1">
+                    <h1>Acesso rápido</h1>
+                    <nav class="nav menu2">
+                        <a class="nav-link active" href="#">Home</a>
+                        <a class="nav-link active" href="#">Burguers</a>
+                        <a class="nav-link active" href="#">Acompanhamentos</a>
+                        <a class="nav-link active" href="#">Sobremesas</a>
+                        <a class="nav-link active" href="#">Contatos</a>
+                    </nav>
+                </div>
             </div>
 
             <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-                <h1>Como nasceu o melhor hamburguer</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ullam vitae, explicabo nulla modi
-                    aliquam
-                    iste repellendus, nemo consequuntur tempora sapiente magni nesciunt quisquam, enim debitis quaerat
-                    rerum
-                    fugiat dolores?
-                    Quam quas temporibus eligendi assumenda eveniet est quibusdam at natus deleniti quod dolores officia
-                    optio molestiae officiis ab non, porro itaque vel. Aut laudantium laborum blanditiis tenetur
-                    provident
-                    deserunt rem?
-                </p>
+                <div class="grid_cor1">
+                    <h1>Como nasceu o melhor hamburguer</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ullam vitae, explicabo nulla modi
+                        aliquam
+                        iste repellendus, nemo consequuntur tempora sapiente magni nesciunt quisquam, enim debitis
+                        quaerat
+                        rerum
+                        fugiat dolores?
+                        Quam quas temporibus eligendi assumenda eveniet est quibusdam at natus deleniti quod dolores
+                        officia
+                        optio molestiae officiis ab non, porro itaque vel. Aut laudantium laborum blanditiis tenetur
+                        provident
+                        deserunt rem?
+                    </p>
+                </div>
             </div>
 
             <div class="col-12 col-sm-12 col-md-3 col-lg-3">
-                <h1>Onde estamos</h1>
-                <img src="imagens/estabelecimento.jpg" alt="Imagem do estabelecimento">
+                <div class="grid_cor1">
+                    <h1>Onde estamos?</h1>
+                    <img src="imagens/estabelecimento.jpg" alt="Imagem do estabelecimento">
+                </div>
             </div>
         </section>
     </main>
