--- a/Bootstrap Grid/index.html
+++ b/Bootstrap Grid/index.html
@@ -7,6 +7,7 @@
     <title>Tex Burguers</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="estilos.css">
 </head>
 
@@ -14,16 +15,25 @@
 
     <header class="container header">
         <img src="imagens/tex_logo.png" class="logo" alt="Logo">
-        <nav class="nav menu1">
-            <a class="nav-link active" href="#">Home</a>
-            <a class="nav-link active" href="#">Burguers</a>
-            <a class="nav-link active" href="#">Acompanhamentos</a>
-            <a class="nav-link active" href="#">Sobremesas</a>
-            <a class="nav-link active" href="#">Contatos</a>
-        </nav>
+
+        <div class="container_nav">
+            <input type="checkbox" id="menuToggle">
+            <label for="menuToggle" class="menu-icon">
+                <i class="fa fa-bars"></i>
+                <i class="fa fa-times-circle"></i>
+            </label>
+
+            <nav class="nav menu1">
+                <a class="nav-link active" href="#">Home</a>
+                <a class="nav-link active" href="#">Burguers</a>
+                <a class="nav-link active" href="#">Acompanhamentos</a>
+                <a class="nav-link active" href="#">Sobremesas</a>
+                <a class="nav-link active" href="#">Contatos</a>
+            </nav>
+        </div>
     </header>
 
-    <main class="container">
+    <main class="container main">
         <section class="row banner">
             <div class="col-12">
                 <img src="imagens/burgers-banner.jpg" alt="Banner do Burguer">
