--- a/Bootstrap Componentes/index.html
+++ b/Bootstrap Componentes/index.html
@@ -17,10 +17,10 @@
         <div class="row">
             <div class="col-12 header_area">
                 <div class="row">
-                    <div class="col-2">
+                    <div class="col-12 col-sm-12 col-md-4 col-lg-2">
                         <img src="imagens/logo.png" alt="Logo Mob imóveis.com" class="logo">
                     </div>
-                    <div class="col-10">
+                    <div class="col-12 col-sm-12 col-md-8 col-lg-10 menu_area">
                         <nav class="nav nav-pills flex-column flex-sm-row">
                             <a class="flex-sm-fill text-sm-center nav-link active" href="#">Home</a>
                             <a class="flex-sm-fill text-sm-center nav-link" href="#">Empreendimentos</a>
@@ -44,8 +44,8 @@
 
     <footer class="container footer">
         <div class="row">
-            <div class="col-12">
-                Rodapé
+            <div class="col-12 footer_area">
+                Mob imóveis - Todos os direitos reservados - 2022
             </div>
         </div>
     </footer>
