Aula: "Videoaula - Mão na Massa - Componentes 4 / 4"

--- a/Bootstrap Componentes/index.html
+++ b/Bootstrap Componentes/index.html
@@ -12,6 +12,90 @@
 
 <body>
 
+    <!-- Modal apartamento 1 Inicio -->
+    <div class="modal fade" id="modalApartamento1" tabindex="-1" aria-labelledby="modalApartamento1Label">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalPresio1Label">Apartamento 1</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <img src="imagens/apt_01.jpg" alt="Sala do Apartamento 1">
+                    <p>Maravilhoso apartamento com 3 quartos</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn-warning">Comprar</button>
+                    <button type="button" class="btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal apartamento 1 - Fim -->
+
+    <!-- Modal apartamento 2 Inicio -->
+    <div class="modal fade" id="modalApartamento2" tabindex="-1" aria-labelledby="modalApartamento2Label">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalPresio1Label">Apartamento 2</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <img src="imagens/apt_02.jpg" alt="Sala do Apartamento 2">
+                    <p>Maravilhoso apartamento com 2 quartos e sem suite</p>
+                </div>
+                <div class=" modal-footer">
+                    <button type="button" class="btn-warning">Comprar</button>
+                    <button type="button" class="btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal apartamento 2 - Fim -->
+
+    <!-- Modal apartamento 3 Inicio -->
+    <div class="modal fade" id="modalApartamento3" tabindex="-1" aria-labelledby="modalApartamento3Label">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalPresio1Label">Apartamento 3</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <img src="imagens/apt_03.jpg" alt="Vista externa do prédio do Apartamento 3">
+                    <p>Maravilhoso apartamento com 4 quartos</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn-warning">Comprar</button>
+                    <button type="button" class="btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal apartamento 3 - Fim -->
+
+    <!-- Modal apartamento 4 Inicio -->
+    <div class="modal fade" id="modalApartamento4" tabindex="-1" aria-labelledby="modalApartamento4Label">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalPresio1Label">Apartamento 4</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <img src="imagens/apt_04.jpg" alt="Vista externa do Apartamento 4">
+                    <p>Maravilhoso apartamento com 5 quartos</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn-warning">Comprar</button>
+                    <button type="button" class="btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal apartamento 4 - Fim -->
+
     <header class="container header">
 
         <div class="row">
@@ -87,7 +171,30 @@
                         </div>
 
                     </div>
-                    <div class="col-12 col-sm-12 col-md-2"></div>
+                    <div class="col-12 col-sm-12 col-md-2 menu_area2">
+                        <nav class="nav nav-pills flex-column flex-sm-row">
+                            <a class="flex-sm-fill text-sm-center nav-link" href="#" data-bs-toggle="modal"
+                                data-bs-target="#modalApartamento1">Prédio
+                                1
+                                -
+                                Acabamento</a>
+                            <a class="flex-sm-fill text-sm-center nav-link" href="#" data-bs-toggle="modal"
+                                data-bs-target="#modalApartamento2">Prédio
+                                2
+                                -
+                                Terminado</a>
+                            <a class="flex-sm-fill text-sm-center nav-link" href="#" data-bs-toggle="modal"
+                                data-bs-target="#modalApartamento3">Prédio
+                                3
+                                -
+                                Iniciando</a>
+                            <a class="flex-sm-fill text-sm-center nav-link" href="#" data-bs-toggle="modal"
+                                data-bs-target="#modalApartamento4">Prédio
+                                4
+                                -
+                                Terminado</a>
+                        </nav>
+                    </div>
                 </div>
             </div>
 
