Corrigindo erro do design da calculadora

--- a/Calculadora em JavaScript/index.html
+++ b/Calculadora em JavaScript/index.html
@@ -146,7 +146,7 @@
                 <div class="row">
 
                     <!-- Botão AC: Inicio -->
-                    <div class="col offset-6">
+                    <div class="col">
                         <button id="bt-ac" type="button" class="btn btn-secondary button-text">AC</button>
                     </div>
                     <!-- Botão AC: Fim -->
