Aula: 'Mão na Massa - Jogo da memória em JavaScript': Vídeo: 18:36

--- a/Jogo da memoria em JavaScript/index.html
+++ b/Jogo da memoria em JavaScript/index.html
@@ -138,10 +138,16 @@
                         <img id="i15">
                     </div>
                     <!-- Carta 16: Fim -->
-                    
+
                 </div>
             </div>
             <!-- Área onde ficarão as cartas: Fim -->
+
+            <div id="rodape" class="row">
+                <div class="col">
+                    <button id="btInicio" type="button" class="btn btn-primary btn-lg">Iniciar</button>
+                </div>
+            </div>
 
         </div>
         <!-- Área do Jogo da Memória: Fim -->
