Aula: 'Mão na Massa - Jogo da memória em JavaScript': Vídeo: 28:30

--- a/Jogo da memoria em JavaScript/index.html
+++ b/Jogo da memoria em JavaScript/index.html
@@ -36,25 +36,25 @@
 
                     <!-- Carta 1: Inicio -->
                     <div class="col-3">
-                        <img id="i0">
+                        <img id="i0" crossorigin="anonymous">
                     </div>
                     <!-- Carta 1: Fim -->
 
                     <!-- Carta 2: Inicio -->
                     <div class="col-3">
-                        <img id="i1">
+                        <img id="i1" crossorigin="anonymous">
                     </div>
                     <!-- Carta 2: Fim -->
 
                     <!-- Carta 3: Inicio -->
                     <div class="col-3">
-                        <img id="i2">
+                        <img id="i2" crossorigin="anonymous">
                     </div>
                     <!-- Carta 3: Fim -->
 
                     <!-- Carta 4: Inicio -->
                     <div class="col-3">
-                        <img id="i3">
+                        <img id="i3" crossorigin="anonymous">
                     </div>
                     <!-- Carta 4: Fim -->
 
@@ -63,25 +63,25 @@
 
                     <!-- Carta 5: Inicio -->
                     <div class="col-3">
-                        <img id="i4">
+                        <img id="i4" crossorigin="anonymous">
                     </div>
                     <!-- Carta 5: Fim -->
 
                     <!-- Carta 6: Inicio -->
                     <div class="col-3">
-                        <img id="i5">
+                        <img id="i5" crossorigin="anonymous">
                     </div>
                     <!-- Carta 6: Fim -->
 
                     <!-- Carta 7: Inicio -->
                     <div class="col-3">
-                        <img id="i6">
+                        <img id="i6" crossorigin="anonymous">
                     </div>
                     <!-- Carta 7: Fim -->
 
                     <!-- Carta 8: Inicio -->
                     <div class="col-3">
-                        <img id="i7">
+                        <img id="i7" crossorigin="anonymous">
                     </div>
                     <!-- Carta 8: Fim -->
 
@@ -90,25 +90,25 @@
 
                     <!-- Carta 9: Inicio -->
                     <div class="col-3">
-                        <img id="i8">
+                        <img id="i8" crossorigin="anonymous">
                     </div>
                     <!-- Carta 9: Fim -->
 
                     <!-- Carta 10: Inicio -->
                     <div class="col-3">
-                        <img id="i9">
+                        <img id="i9" crossorigin="anonymous">
                     </div>
                     <!-- Carta 10: Fim -->
 
                     <!-- Carta 11: Inicio -->
                     <div class="col-3">
-                        <img id="i10">
+                        <img id="i10" crossorigin="anonymous">
                     </div>
                     <!-- Carta 11: Fim -->
 
                     <!-- Carta 12: Inicio -->
                     <div class="col-3">
-                        <img id="i11">
+                        <img id="i11" crossorigin="anonymous">
                     </div>
                     <!-- Carta 12: Fim -->
 
@@ -117,25 +117,25 @@
 
                     <!-- Carta 13: Inicio -->
                     <div class="col-3">
-                        <img id="i12">
+                        <img id="i12" crossorigin="anonymous">
                     </div>
                     <!-- Carta 13: Fim -->
 
                     <!-- Carta 14: Inicio -->
                     <div class="col-3">
-                        <img id="i13">
+                        <img id="i13" crossorigin="anonymous">
                     </div>
                     <!-- Carta 14: Fim -->
 
                     <!-- Carta 15: Inicio -->
                     <div class="col-3">
-                        <img id="i14">
+                        <img id="i14" crossorigin="anonymous">
                     </div>
                     <!-- Carta 15: Fim -->
 
                     <!-- Carta 16: Inicio -->
                     <div class="col-3">
-                        <img id="i15">
+                        <img id="i15" crossorigin="anonymous">
                     </div>
                     <!-- Carta 16: Fim -->
 
