--- a/Jogo da memoria em JavaScript/index.html
+++ b/Jogo da memoria em JavaScript/index.html
@@ -30,6 +30,14 @@
         <!-- Área do Jogo da Memória: Inicio -->
         <div id="memoria">
 
+            <!-- Área do timer: Inicio -->
+            <div class="row">
+                <div class="col">
+                    <p id="timer">00:00</p>
+                </div>
+            </div>
+            <!-- Área do timer: Fim -->
+
             <!-- Área onde ficarão as cartas: Inicio -->
             <div id="imagens">
                 <div class="row">
