--- a/JQuery/Manipulacao conteudo/index.html
+++ b/JQuery/Manipulacao conteudo/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <h1>jQuery</h1>
-    <p>Contador: 0</p>
+    <p>Contador: <span id="contador">0</span></p>
     <p><button>+1</button></p>
 </body>
 
