--- a/JQuery/Manipulacao conteudo/index.html
+++ b/JQuery/Manipulacao conteudo/index.html
@@ -18,7 +18,7 @@
 <body>
     <h1>jQuery</h1>
     <p>Contador: <span id="contador">0</span></p>
-    <p><button>+1</button></p>
+    <p><button id="mais1">+1</button></p>
 </body>
 
 </html>
