Aula: 'Manipulação do conteúdo com jQuery': Vídeo: 04:18

--- a/JQuery/Manipulacao conteudo/index.html
+++ b/JQuery/Manipulacao conteudo/index.html
@@ -10,7 +10,10 @@
         crossorigin="anonymous"></script>
     <script>
         $(document).ready(function () {
-
+            $('#mais1').click(function () {
+                let valor = parseInt($('#contador').text());
+                console.log(valor);
+            });
         });
     </script>
 </head>
