Aula: 'Manipulação do conteúdo com jQuery': Vídeo: 04:45

--- a/JQuery/Manipulacao conteudo/index.html
+++ b/JQuery/Manipulacao conteudo/index.html
@@ -12,7 +12,7 @@
         $(document).ready(function () {
             $('#mais1').click(function () {
                 let valor = parseInt($('#contador').text());
-                console.log(valor);
+                $('#contador').text(valor + 1);
             });
         });
     </script>
