--- a/JQuery/Manipulacao conteudo/index.html
+++ b/JQuery/Manipulacao conteudo/index.html
@@ -10,6 +10,10 @@
         crossorigin="anonymous"></script>
     <script>
         $(document).ready(function () {
+            $('#menos1').click(function () {
+                let valor = parseInt($('#contador').text());
+                $('#contador').text(valor - 1);
+            });
             $('#mais1').click(function () {
                 let valor = parseInt($('#contador').text());
                 $('#contador').text(valor + 1);
@@ -21,7 +25,10 @@
 <body>
     <h1>jQuery</h1>
     <p>Contador: <span id="contador">0</span></p>
-    <p><button id="mais1">+1</button></p>
+    <p>
+        <button id="menos1">-1</button>
+        <button id="mais1">+1</button>
+    </p>
 </body>
 
 </html>
