--- a/JQuery/Manipulacao conteudo/index.html
+++ b/JQuery/Manipulacao conteudo/index.html
@@ -12,7 +12,9 @@
         $(document).ready(function () {
             $('#menos1').click(function () {
                 let valor = parseInt($('#contador').text());
-                $('#contador').text(valor - 1);
+                if (valor > 0) {
+                    $('#contador').text(valor - 1);
+                }
             });
             $('#mais1').click(function () {
                 let valor = parseInt($('#contador').text());
