--- a/JQuery/Manipulacao conteudo/index.html
+++ b/JQuery/Manipulacao conteudo/index.html
@@ -14,11 +14,14 @@
                 let valor = parseInt($('#contador').text());
                 if (valor > 0) {
                     $('#contador').text(valor - 1);
+                } else {
+                    $('#menos1').prop('disabled', true);
                 }
             });
             $('#mais1').click(function () {
                 let valor = parseInt($('#contador').text());
                 $('#contador').text(valor + 1);
+                $('#menos1').prop('disabled', false);
             });
         });
     </script>
